@@ -1,44 +1,5 @@
-*.Plo
-*.Po
-*.a
-*.bz2
-*.d
-*.gz
-*.la
-*.lo
-*.o
-.deps
-.dirstamp
-.libs
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache
-compile
-config.guess
-config.h
-config.h.in
-config.log
-config.mk
-config.status
-config.sub
-config_detected.h
-config_detected.mk
-configure
-depcomp
-depmode
-install-sh
-libtool
-ltmain.sh
-missing
-mkinstalldirs
-stamp-*
-tags
-*~
-.stgit*
-*.so
-\#*#
-*.pc
+/output/
+/obj-*/
 
 debian/files
 debian/*.log
