@@ -1,57 +1,0 @@
-AC_PREREQ(2.67)
-AC_INIT(CM4all libhttp, 1.2.7, mk@cm4all.com, libcm4all-http)
-AC_COPYRIGHT(Copyright 2006-2020 CM4all GmbH)
-AC_CONFIG_SRCDIR(src/method.c)
-AC_CONFIG_AUX_DIR(build)
-AM_INIT_AUTOMAKE([foreign 1.11 subdir-objects silent-rules])
-
-dnl Checks for programs.
-
-AC_PROG_INSTALL
-AC_PROG_RANLIB
-AC_PROG_CC_C99
-
-dnl
-dnl CFLAGS
-dnl
-
-AC_SUBST(AM_CFLAGS)
-AC_SUBST(AM_CPPFLAGS)
-
-AM_CFLAGS="-Wall -Wextra"
-AM_CPPFLAGS="-D_REENTRANT"
-
-AM_CFLAGS="$AM_CFLAGS -Wmissing-prototypes -Wwrite-strings -Wcast-qual -Wfloat-equal -Wshadow -Wpointer-arith -Wbad-function-cast -Wsign-compare -Waggregate-return -Wmissing-declarations -Wmissing-noreturn -Wpacked -Wredundant-decls -Wnested-externs -Winline -Wdisabled-optimization -Wno-long-long -Wstrict-prototypes -Wundef -pedantic"
-
-AM_CFLAGS="$AM_CFLAGS -fPIC"
-
-dnl
-dnl DEBUG
-dnl
-
-AC_ARG_ENABLE(debug,
-	AS_HELP_STRING([--disable-debug],
-		[Disable debugging (default: enabled)]),,
-	enable_debug=yes)
-
-if test x$enable_debug != xyes; then
-    AM_CPPFLAGS="$AM_CPPFLAGS -DNDEBUG"
-fi
-
-AC_ARG_ENABLE(werror,
-	AS_HELP_STRING([--enable-werror],
-		[treat warnings as errors]),,
-	enable_werror=$enable_debug)
-
-if test x$enable_werror = xyes; then
-    AM_CFLAGS="$AM_CFLAGS -Werror -pedantic-errors"
-fi
-
-dnl
-dnl Output files
-dnl
-
-AC_OUTPUT(
-Makefile
-libcm4all-http.pc
-)
