@@ -2,8 +2,8 @@ Source: libcm4all-http
 Section: non-free/libs
 Priority: optional
 Maintainer: Max Kellermann <mk@cm4all.com>
-Build-Depends: debhelper (>= 10~),
- autoconf (>= 2.67), automake (>= 1.11)
+Build-Depends: debhelper (>= 12~),
+ meson (>= 0.37)
 Standards-Version: 3.9.1
 
 Package: libcm4all-http-dev
