@@ -1,10 +1,13 @@
 #!/usr/bin/make -f
 # -*- mode: makefile; coding: utf-8 -*-
 
-%:
-	dh $@ --with autoreconf
+MESON_OPTIONS = \
+	--includedir=include/cm4all/libhttp-0 \
+	--werror
 
+%:
+	dh $@
+
+.PHONY: override_dh_auto_configure
 override_dh_auto_configure:
-	dh_auto_configure -- \
-		--includedir=/usr/include/cm4all/libhttp-0 \
-		--enable-debug
+	dh_auto_configure -- $(MESON_OPTIONS)
