@@ -1,10 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
-
-Name: libcm4all-http
-Description: CM4all HTTP library
-Version: @VERSION@
-Libs: -L${libdir} -lcm4all-http
-Cflags: -I${includedir}
